# nginx-proxy-manager-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: check-npm-release.yml  close-stale-issues.yml
src/npm_mcp/: __init__.py  client.py  models.py  server.py
tests/: __init__.py  test_client.py  test_errors.py  test_models.py  test_server.py
